# Assignment-3

./: .gitignore  README.md  chess_game.py  config.py  init.py  launch_demo.py  login_callback.py  pyproject.toml
Chess game/: README.md
backend/: two_factor_router.py
backend/adapters/: db.py  game_service.py  jwt.py  models.py  password_hasher.py  user_service.py
backend/routers/: debug_router.py  game_router.py  two_factor_router.py  user_router.py
backend/schemas/: game_schema.py  two_factor_schema.py  user_schema.py
frontend/2fa/: components.json  package.json  pnpm-lock.yaml
frontend/2fa/src/: App.tsx  index.css
frontend/2fa/src/components/: AdminDashboard.tsx  LoginPage.tsx  RegisterPage.tsx  RequireAuth.tsx
frontend/2fa/src/context/: AuthContext.tsx
frontend/2fa/src/lib/: api.ts  utils.ts
frontend/2fa/src/pages/: AdminPage.tsx  ChessPage.tsx  LoginPage.tsx  RegisterPage.tsx  TwoFactorPage.tsx  TwoFactorSetupPage.tsx
